k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fenixgate
  namespace: fg
spec:
  selector:
    app: fenixgate
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
