k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fenixgate
  namespace: fg
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - fenixgate.lat
        - www.fenixgate.lat
      secretName: fenixgate-tls
  rules:
    - host: fenixgate.lat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fenixgate
                port:
                  number: 80
    - host: www.fenixgate.lat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fenixgate
                port:
                  number: 80
